--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -56,7 +56,7 @@
         </tr>
         <tr th:each="Item : ${MenuItems}" th:if="${Item.Category} == 'appetizer'">
             <td th:text="${Item.ItemName}"></td>
-            <td th:text="${Item.Price}"></td>
+            <td th:text="'$'+${#numbers.formatDecimal(Item.Price, 0, 'COMMA', 2, 'POINT')}"></td>
             <td th:text="${Item.Description}"></td>
             <td>
                 <form role="form" method="post" th:object="${Item}" th:action="@{'/AddToCart/{ID}' (ID=${Item.ID})}">
@@ -82,7 +82,7 @@
         </tr>
         <tr th:each="Item : ${MenuItems}" th:if="${Item.Category} == 'entree'">
             <td th:text="${Item.ItemName}"></td>
-            <td th:text="${Item.Price}"></td>
+            <td th:text="'$'+${#numbers.formatDecimal(Item.Price, 0, 'COMMA', 2, 'POINT')}"></td>
             <td th:text="${Item.Description}"></td>
             <td>
                 <form role="form" method="post" th:object="${Item}" th:action="@{'/AddToCart/{ID}' (ID=${Item.ID})}">
@@ -108,7 +108,7 @@
         </tr>
         <tr th:each="Item : ${MenuItems}" th:if="${Item.Category} == 'dessert'">
             <td th:text="${Item.ItemName}"></td>
-            <td th:text="${Item.Price}"></td>
+            <td th:text="'$'+${#numbers.formatDecimal(Item.Price, 0, 'COMMA', 2, 'POINT')}"></td>
             <td th:text="${Item.Description}"></td>
             <td>
                 <form role="form" method="post" th:object="${Item}" th:action="@{'/AddToCart/{ID}' (ID=${Item.ID})}">
